<resources>
    <string name="app_name">my_project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="City">City</string>
    <string name="Coordinates">Coordinates</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="Country">Country</string>
    <string name="temp">temp</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="sea">sea</string>
    <string name="ground">ground</string>
    <string name="wind">wind</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Sunset">Sunset</string>
    <string name="title_city">City</string>
    <string name="title_coord">Coordinates</string>
</resources>
