<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".display.display_city">


    <TextView
        android:id="@+id/sunset_home"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/Sunset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sunrise_home"
        android:inputType="date"/>

    <ImageView
        android:id="@+id/icon_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/Country_home"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:hint="@string/Country"
        app:layout_constraintEnd_toStartOf="@+id/icon_home"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name_home"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Name"
        app:layout_constraintEnd_toStartOf="@+id/icon_home"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Country_home" />

    <TextView
        android:id="@+id/temperature_hom"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:hint="@string/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_home" />

    <TextView
        android:id="@+id/pressure_home"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_hom" />

    <TextView
        android:id="@+id/humidity_home"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_home" />

    <TextView
        android:id="@+id/sea_level_home"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/sea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidity_home" />

    <TextView
        android:id="@+id/ground_level_home"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/ground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sea_level_home" />

    <TextView
        android:id="@+id/Wind_home"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/wind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ground_level_home" />

    <TextView
        android:id="@+id/Sunrise_home"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:hint="@string/Sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Wind_home"
        android:inputType="date"/>
</androidx.constraintlayout.widget.ConstraintLayout>